--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-501.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.236, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-927.4KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-11.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-392.1KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-772.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 178.157.62.49, port: 50500, type: trojan, password: c5d997fe-cde6-463c-a671-a296b47289a6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-998.5KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇦 加拿大-619.7KB/s(Youtube:不良林), server: 134.195.198.95, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-576.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-586.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-429.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-558.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-441.2KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-543.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-927.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-392.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-998.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-619.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-576.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-429.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-558.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-543.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
