--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇰🇷 韩国-835.9KB/s(Youtube:不良林), server: 13.124.190.68, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.239, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-760.7KB/s(Youtube:不良林), server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2, server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: 54.179.88.143, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇦 加拿大-1.35MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.22MB/s(Youtube:不良林), server: 103.173.255.234, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.47MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-313.3KB/s(Youtube:不良林), server: 80.78.132.177, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-550.2KB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-342.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-319.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-304.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-444.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-595.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-835.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林) 2
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.35MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
